# hashinator

./: .gitignore  CITATION.cff  Doxyfile  README.md  meson.build
.github/workflows/: tests.yml
benchmark/: Makefile  benchmark  hashmap.cu  plot.py  run_bench.sh
examples/: Makefile  hashmap.cu  splitvector.cu
include/: Doxyfile  common.h  hashinator_atomics.h
include/hashinator/: defaults.h  hash_pair.h  hashers.h  hashfunctions.h  hashinator.h  hashmap.h  kernels_AMD.h  kernels_NVIDIA.h  unordered_set.h
include/hashinator/hashmap/: hashers.h  hashfunctions.h  hashmap.h  kernels_AMD.h
include/hashinator/unordered_set/: unordered_set.h
include/splitvector/: archMacros.h  devicevec.h  gpu_wrappers.h  split_allocators.h  split_tools.h  splitvec.h
scripts/: perf_plot_lf.py
src/cuda_mempool/: doublystackedarena.h  list.h  mempool.h
src/hashinator/: defaults.h  hash_pair.h  hashers.h  hashfunctions.h  hashinator.h  tombstoneCleaning.h
src/hashinator_2/: hashinator.h
src/splitvector/: split_allocators.h  split_tools.h  splitvec.h
tests/: Makefile  gtest_hashmap  insertion  run_tests.sh  vec_alloc  vec_of_vec
tests/100M_test/: main.cu
tests/add_remove_map_elements/: main.cu
tests/benchmark/: loadFactor.cu  main.cu
tests/bucket_bank/: bank.cu
tests/constructor_test/: vec_test.cu
tests/cpu_only/: main.cpp
tests/delete_by_compaction/: main.cu
tests/gtest_hashmap_rw/: main.cu
tests/gtest_hasmap/: .unit.cu.swo  speed_test.cu  unit.cu
tests/gtest_vec/: vec_test.cu
tests/gtest_vec_device/: vec_test.cu
tests/gtest_vec_host/: vec_test.cu
tests/hash_gpu_vs_cpu/: gpuport.cu
tests/hashmap_unit_test/: main.cu
tests/hybrid/: main.cpp
tests/insertion_mechanism/: main.cu
tests/map_operators/: main.cu
tests/mempool_test/: mempool_main.cu
tests/pointer_test/: main.cu
tests/speed_tests/: speed_test.cu
tests/stream_compaction/: main.cu  race.cu
tests/vec_allocator/: alloc_vec_test.cu
tests/vec_speed_test/: main.cu
tests/vector_of_vectors/: vec_of_vec_test.cu
tests/vector_tests/: vec_test.cu
unit_tests/: Makefile  Makefile_amd  gtest_hashmap  gtestdevicevec  hybrid_cpu
unit_tests/benchmark/: loadFactor.cu  main.cu  realistic.cu  tbPerf.cu
unit_tests/delete_by_compaction/: main.cu
unit_tests/gtest_dev_vec/: vec_test.cu
unit_tests/gtest_vec_device/: vec_test.cu
unit_tests/gtest_vec_host/: vec_test.cu
unit_tests/hashmap_unit_test/: main.cu
unit_tests/hybrid/: main.cu
unit_tests/insertion_mechanism/: main.cu
unit_tests/pointer_test/: main.cu
unit_tests/stream_compaction/: bench.cu  main.cu  preallocated.cu  race.cu  unit.cu
unit_tests/unordered_set_unit_test/: main.cpp  main.cu
